fix: add gap to Nav

--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -4,6 +4,7 @@ nav.Navbar {
 	display: flex;
 	flex-flow: row nowrap;
 	justify-content: space-around;
+	gap: 10px;
 	padding: 10px;
 	overflow: visible;
 }
